<resources>
    <string name="app_name">Sax Music Player</string>
    <string name="welcome_text">Welcome to the Sax Music Player!</string>
    <string name="all_songs">All songs</string>
    <string name="drawer_open" translatable="false">Drawer Open</string>
    <string name="drawer_close" translatable="false">Drawer Close</string>
    <string name="default_playlist">Default playlist</string>

    <string name="settings">Settings</string>
    <string name="lyrics">Lyrics</string>
    <string name="details_rating">Details And Rating</string>
    <string name="language_preference">Language</string>
    <string name="language_summary">Select language</string>
    <string name="default_playlist_preference">Default Playlist</string>
    <string name="default_playlist_summary">Select your default playlist</string>
    <string name="scan_device">Scan Your Device</string>
    <string name="scan_device_summary">If you added some songs to external storage, run this option to find new songs.</string>
    <string name="playlist_manager">Playlist Manager</string>
    <string name="playlist_manager_summary">Manage Your Playlists</string>
    <string name="lang_en">English</string>
    <string name="lang_sr">Serbian</string>
    <string name="lang_en_value" translatable="false">en</string>
    <string name="lang_sr_value" translatable="false">sr</string>
    <string name="playlist_name">Playlist name</string>
    <string name="read_storage_phone_approved">Permission approved to read your External storage and Phone state</string>
    <string name="read_storage_phone_denied">Permission denied to read your External storage and Phone state</string>
    <string name="playlist_description">Playlist description</string>
    <string name="playlist_duplicate">Playlist with that name already exist!</string>
    <string name="playlist_add_to_ql">Add to Quick Launch</string>
    <string name="cant_delete_active_playlist">You can\'t delete active playlist. Please open another playlist and try again.</string>
    <string name="cant_add_rem_song_active_playlist">You can\'t add or remove songs from active playlist. Please open another playlist and try again.</string>
    <string name="clean_device">Clean Your Songs</string>
    <string name="clean_device_summary">If you removed some songs from external storage, run this option to clean your playlists.</string>
    <string name="long_operation">This operation can take some time to finish. Are you sure you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_wait">Loading...</string>
    <string name="empty_list_of_songs">There is no songs to play. Please load another playlist, or rescan device.</string>
    <string name="no_song_on_sd">Skipping to the next song. Previous song not found.</string>
    <string name="default_playlist_default_string">None</string>
    <string name="active_playlist_name">Playlist you are listening:\u0020</string>
    <string name="choose_all_songs">All songs loaded</string>
    <string name="loading_splash_screen">Loading songs</string>
    <string name="loading_splash_screen_bit_more">Setting things up</string>
    <string name="song_title">Song Title</string>
    <string name="select_song">Select Song</string>
    <string name="song_name_details">Song name: </string>
    <string name="song_artist">Song artist: </string>
    <string name="song_rank">Song rank: </string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="are_you_sure">Are you sure you want to continue?</string>

    <string name="preference_file_key" translatable="false">com.example.buca.saxmusicplayer.PREFERENCE_FILE_KEY</string>
    <string name="initial_scan_done_key" translatable="false">com.example.buca.saxmusicplayer.INITIAL_SCAN_DONE_KEY</string>
    <string name="user_should_run_cleaner" translatable="false">com.example.buca.saxmusicplayer.USER_SHOULD_RUN_CLEANER</string>

    <string name="about_app">About application</string>
    <string name="about_app_title">Sax</string>
    <string name="about_app_text">Sax is the best open source music player in the world created by 3 students of FTN in Novi Sad. Sonja, Stefan and Stojan.</string>

    <string name="song_name"> </string>
    <string name="song_title_is_unknown"> Song title unknown </string>
    <string name="song_title_is_not_valid"> Song artist and title is invalid, fill metadata or change file name in form of Artist - Song Name </string>
    <string name="album_cover"> Song album cover </string>

    <string name="rate_app"> Rate app </string>
    <string name="rate_result"> Stars given: </string>

    <string name="choose_playlist">Choose Playlist</string>
    <string name="choose_playlist_default_string">None</string>
    <string name="sensor">You rotated a device screen to the bottom so the player has paused a song</string>
</resources>
