<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/CustomPopupTheme"
        />

    <TextView
        android:id="@+id/about_sax_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="32dp"
        android:paddingTop="16dp"
        android:textSize="30dp"
        android:text="@string/app_name"

        />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="87dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/mptrames"
        android:layout_weight="0.03" />

    <TextView
        android:id="@+id/about_sax_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="32dp"
        android:text="@string/about_app_text"

        />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:numStars="5"
        android:indeterminateTint="@color/colorAccent"
        android:progressTint="@color/colorAccent"
        android:foregroundTint="@color/colorAccent"
        android:rating="2.0"
        android:stepSize="1.0" />

    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/rate_app" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/lblResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_result"
            android:textAppearance="?android:attr/textAppearanceSmall" />


        <TextView
            android:id="@+id/txtRatingValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="2.0"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</LinearLayout>
</ScrollView>